--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   position: asbsolute;
   top: 50%;
   width: 100%;
-  transform: traslateY(-50%)
+  transform: translateY(-50%)
 }
 
 a.count {
