--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
 body {
   text-align: center;
   background-color: rgb(142, 226, 237);
-  position: asbsolute;
-  top: 50%;
-  width: 100%;
-  transform: translateY(-50%)
+  margin-top: 200px
 }
 
 a.count {
