Center the body

--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body {
   text-align: center;
   background-color: rgb(142, 226, 237);
-  margin-top: 500px
+  width: 300%
+  position: absolute;
+  top: 50%;
+  tranform: translateY(-50%)
 }
 
 a.count {
