--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
   text-align: center;
   background-color: rgb(142, 226, 237);
-  width: 100%
+  width: 100%;
   position: absolute;
   top: 50%;
-  tranform: translateY(-50%)
+  transform: translateY(-50%);
+  cursor: default;
 }
 
 a.count {
